--- a/index.html
+++ b/index.html
@@ -2,27 +2,77 @@
 
 <div class="content pure-g">
 
-  <div class="grid pure-u-1-3">
-    <div class="block thumbnail" data-color="#000">
-      <img src="<!-- @path img1.jpg -->" class="pure-img" />
-      123
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Base</div>
+      <div class="description">UI Framework</div>
     </div>
   </div>
 
-  <div class="grid pure-u-1-3">
-    <div class="block thumbnail" data-color="#F0F">
-      <img src="<!-- @path img1.jpg -->" class="pure-img" />
-      123
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Project Title</div>
+      <div class="description">Description</div>
     </div>
   </div>
 
-  <div class="grid pure-u-1-3">
-    <div class="block thumbnail" data-color="#F00">
-      <img src="<!-- @path img1.jpg -->" class="pure-img" />
-      123
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Project Title</div>
+      <div class="description">Description</div>
     </div>
   </div>
 
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Base</div>
+      <div class="description">UI Framework</div>
+    </div>
+  </div>
+
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Project Title</div>
+      <div class="description">Description</div>
+    </div>
+  </div>
+
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Project Title</div>
+      <div class="description">Description</div>
+    </div>
+  </div>
+
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Base</div>
+      <div class="description">UI Framework</div>
+    </div>
+  </div>
+
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Project Title</div>
+      <div class="description">Description</div>
+    </div>
+  </div>
+
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Project Title</div>
+      <div class="description">Description</div>
+    </div>
+  </div>
 
 </div>
 
