--- a/index.html
+++ b/index.html
@@ -1,29 +1,9 @@
 <!-- @include _header -->
 
-<div class="content pure-g">
+<main class="content pure-g">
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
-    <div class="project">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Base</div>
-      <div class="description">UI Framework</div>
-    </div>
-  </div>
-
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
-    <div class="project">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Project Title</div>
-      <div class="description">Description</div>
-    </div>
-  </div>
-
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="project">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Project Title</div>
-      <div class="description">Description</div>
-    </div>
+  <div class="pure-u-1">
+    <h1>Some witty phrase about me.</h1>
   </div>
 
   <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
@@ -74,6 +54,30 @@
     </div>
   </div>
 
-</div>
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Base</div>
+      <div class="description">UI Framework</div>
+    </div>
+  </div>
+
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Project Title</div>
+      <div class="description">Description</div>
+    </div>
+  </div>
+
+  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
+    <div class="project">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="title">Project Title</div>
+      <div class="description">Description</div>
+    </div>
+  </div>
+
+</main>
 
 <!-- @include _footer -->
