Added Calibre, clean up CSS
On the path to renaming .tiles, much CSS cleaned up.

--- a/index.html
+++ b/index.html
@@ -1,79 +1,79 @@
 <!-- @include _header -->
 
-<main class="content pure-g">
+<main class="content pure-g" id="pjax-container">
 
-  <div class="pure-u-1">
-    <h1>Some witty phrase about me.</h1>
+  <div class="intro pure-u-1">
+    <h1 >Witty phrase describing who I am.</h1>
   </div>
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
-    <div class="project">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
+    <div class="thumbnail">
       <img src="<!-- @path img1.png -->" class="pure-img" />
       <div class="title">Base</div>
       <div class="description">UI Framework</div>
     </div>
   </div>
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
-    <div class="project">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
+    <div class="thumbnail">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Project Title</div>
+      <div class="title">thumbnail Title</div>
       <div class="description">Description</div>
     </div>
   </div>
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="project">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
+    <div class="thumbnail">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Project Title</div>
+      <div class="title">thumbnail Title</div>
       <div class="description">Description</div>
     </div>
   </div>
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
-    <div class="project">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
+    <div class="thumbnail">
       <img src="<!-- @path img1.png -->" class="pure-img" />
       <div class="title">Base</div>
       <div class="description">UI Framework</div>
     </div>
   </div>
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
-    <div class="project">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
+    <div class="thumbnail">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Project Title</div>
+      <div class="title">thumbnail Title</div>
       <div class="description">Description</div>
     </div>
   </div>
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="project">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
+    <div class="thumbnail">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Project Title</div>
+      <div class="title">thumbnail Title</div>
       <div class="description">Description</div>
     </div>
   </div>
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
-    <div class="project">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
+    <div class="thumbnail">
       <img src="<!-- @path img1.png -->" class="pure-img" />
       <div class="title">Base</div>
       <div class="description">UI Framework</div>
     </div>
   </div>
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
-    <div class="project">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
+    <div class="thumbnail">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Project Title</div>
+      <div class="title">thumbnail Title</div>
       <div class="description">Description</div>
     </div>
   </div>
 
-  <div class="thumbnail pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="project">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
+    <div class="thumbnail">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Project Title</div>
+      <div class="title">thumbnail Title</div>
       <div class="description">Description</div>
     </div>
   </div>
