--- a/index.html
+++ b/index.html
@@ -6,75 +6,75 @@
     <h1 >Witty phrase describing who I am.</h1>
   </div>
 
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
-    <div class="thumbnail">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Base</div>
-      <div class="description">UI Framework</div>
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#202020">
+    <div class="tile-container tile-link">
+      <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
+      <div class="caption">Base</div>
+      <div class="caption">UI Framework</div>
     </div>
   </div>
 
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
-    <div class="thumbnail">
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#202020">
+    <div class="tile-container tile-link">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">thumbnail Title</div>
-      <div class="description">Description</div>
-    </div>
-  </div>
-
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="thumbnail">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">thumbnail Title</div>
-      <div class="description">Description</div>
-    </div>
-  </div>
-
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
-    <div class="thumbnail">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Base</div>
-      <div class="description">UI Framework</div>
-    </div>
-  </div>
-
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
-    <div class="thumbnail">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">thumbnail Title</div>
-      <div class="description">Description</div>
+      <div class="caption">thumbnail Title</div>
+      <div class="caption">Description</div>
     </div>
   </div>
 
   <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="thumbnail">
+    <div class="tile-container tile-link">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">thumbnail Title</div>
-      <div class="description">Description</div>
+      <div class="caption">thumbnail Title</div>
+      <div class="caption">Description</div>
     </div>
   </div>
 
   <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
-    <div class="thumbnail">
+    <div class="tile-container tile-link">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">Base</div>
-      <div class="description">UI Framework</div>
+      <div class="caption">Base</div>
+      <div class="caption">UI Framework</div>
     </div>
   </div>
 
   <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
-    <div class="thumbnail">
+    <div class="tile-container tile-link">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">thumbnail Title</div>
-      <div class="description">Description</div>
+      <div class="caption">thumbnail Title</div>
+      <div class="caption">Description</div>
     </div>
   </div>
 
   <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="thumbnail">
+    <div class="tile-container tile-link">
       <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="title">thumbnail Title</div>
-      <div class="description">Description</div>
+      <div class="caption">thumbnail Title</div>
+      <div class="caption">Description</div>
+    </div>
+  </div>
+
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
+    <div class="tile-container tile-link">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="caption">Base</div>
+      <div class="caption">UI Framework</div>
+    </div>
+  </div>
+
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
+    <div class="tile-container tile-link">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="caption">thumbnail Title</div>
+      <div class="caption">Description</div>
+    </div>
+  </div>
+
+  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
+    <div class="tile-container tile-link">
+      <img src="<!-- @path img1.png -->" class="pure-img" />
+      <div class="caption">thumbnail Title</div>
+      <div class="caption">Description</div>
     </div>
   </div>
 
