--- a/index.html
+++ b/index.html
@@ -1,83 +1,64 @@
 <!-- @include _header -->
 
-<main class="content pure-g" id="pjax-container">
+<div class="wrapper content">
+  <div class="container pure-g">
 
-  <div class="intro pure-u-1">
-    <h1 >Witty phrase describing who I am.</h1>
-  </div>
-
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#202020">
-    <div class="tile-container tile-link">
-      <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
-      <div class="caption">Base</div>
-      <div class="caption">UI Framework</div>
+    <div class="intro pure-u-1">
+      <h1>I am a Bay Area based Creative Director.</h1>
+      <p>
+        Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      </p>
     </div>
-  </div>
 
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#202020">
-    <div class="tile-container tile-link">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="caption">thumbnail Title</div>
-      <div class="caption">Description</div>
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+      <div class="tile-container tile-link tile-divider">
+        <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
+        <div class="sub-title">Base</div>
+        <div class="caption">UI Framework</div>
+      </div>
     </div>
-  </div>
 
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="tile-container tile-link">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="caption">thumbnail Title</div>
-      <div class="caption">Description</div>
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+      <div class="tile-container tile-link tile-divider">
+        <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
+        <div class="sub-title">Base</div>
+        <div class="caption">UI Framework</div>
+      </div>
     </div>
-  </div>
 
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
-    <div class="tile-container tile-link">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="caption">Base</div>
-      <div class="caption">UI Framework</div>
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+      <div class="tile-container tile-link tile-divider">
+        <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
+        <div class="sub-title">Base</div>
+        <div class="caption">UI Framework</div>
+      </div>
     </div>
-  </div>
 
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
-    <div class="tile-container tile-link">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="caption">thumbnail Title</div>
-      <div class="caption">Description</div>
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+      <div class="tile-container tile-link tile-divider">
+        <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
+        <div class="sub-title">Base</div>
+        <div class="caption">UI Framework</div>
+      </div>
     </div>
-  </div>
 
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="tile-container tile-link">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="caption">thumbnail Title</div>
-      <div class="caption">Description</div>
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+      <div class="tile-container tile-link tile-divider">
+        <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
+        <div class="sub-title">Base</div>
+        <div class="caption">UI Framework</div>
+      </div>
     </div>
-  </div>
 
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E7D7D7">
-    <div class="tile-container tile-link">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="caption">Base</div>
-      <div class="caption">UI Framework</div>
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+      <div class="tile-container tile-link tile-divider">
+        <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
+        <div class="sub-title">Base</div>
+        <div class="caption">UI Framework</div>
+      </div>
     </div>
-  </div>
 
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#D7E7E4">
-    <div class="tile-container tile-link">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="caption">thumbnail Title</div>
-      <div class="caption">Description</div>
-    </div>
-  </div>
-
-  <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-color="#E4E7D7">
-    <div class="tile-container tile-link">
-      <img src="<!-- @path img1.png -->" class="pure-img" />
-      <div class="caption">thumbnail Title</div>
-      <div class="caption">Description</div>
-    </div>
-  </div>
-
-</main>
+  </div> <!-- /.container -->
+</div> <!-- /.wrapper.content -->
 
 <!-- @include _footer -->
