--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!-- @include _header -->
 
-<div class="wrapper content">
+<div class="wrapper content" id="data-container">
   <div class="container pure-g">
 
     <div class="intro pure-u-1">
-      <h1>I am a Bay Area based Creative Director.</h1>
-      <p>
-        Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      </p>
+      <h1>Bay Area based Creative Director and Designer.</h1>
     </div>
 
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="building.html">
+      <div class="tile-container tile-link tile-divider">
+        <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
+        <div class="sub-title">Building</div>
+        <div class="caption">2013 Year Book</div>
+      </div>
+    </div>
+
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="building.html">
       <div class="tile-container tile-link tile-divider">
         <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
         <div class="sub-title">Base</div>
@@ -18,7 +23,7 @@
       </div>
     </div>
 
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="building.html">
       <div class="tile-container tile-link tile-divider">
         <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
         <div class="sub-title">Base</div>
@@ -26,7 +31,7 @@
       </div>
     </div>
 
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="building.html">
       <div class="tile-container tile-link tile-divider">
         <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
         <div class="sub-title">Base</div>
@@ -34,7 +39,7 @@
       </div>
     </div>
 
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="building.html">
       <div class="tile-container tile-link tile-divider">
         <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
         <div class="sub-title">Base</div>
@@ -42,15 +47,7 @@
       </div>
     </div>
 
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
-      <div class="tile-container tile-link tile-divider">
-        <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
-        <div class="sub-title">Base</div>
-        <div class="caption">UI Framework</div>
-      </div>
-    </div>
-
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="building.html">
       <div class="tile-container tile-link tile-divider">
         <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
         <div class="sub-title">Base</div>
