--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
       <h1>Bay Area based Creative Director and Designer.</h1>
     </div>
 
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="building.html">
+    <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="building.html">
       <div class="tile-container tile-link tile-divider">
         <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
         <div class="sub-title">Building</div>
         <div class="caption">2013 Year Book</div>
       </div>
-    </div>
+    </a>
 
     <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="building.html">
       <div class="tile-container tile-link tile-divider">
