Lots of text style cleanup
headings and small-caps styles are defined globally

--- a/index.html
+++ b/index.html
@@ -6,54 +6,62 @@
     <div class="container pure-g">
 
       <div class="intro pure-u-1">
-        <h1>Bay Area based Creative Director and Designer.</h1>
+        <h1 class="h2">Bay Area based Creative Director and Designer.</h1>
       </div>
 
       <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="building.html">
         <div class="tile-container tile-link tile-divider">
-          <img src="<!-- @path building-01-cover_index.jpg -->" class="pure-img" />
-          <div class="sub-title">Building</div>
-          <div class="caption">2013 Year Book</div>
+          <img src="http://placehold.it/934x623/575757/C7C7C7?text=Spectrum" class="pure-img" />
+          <div class="h4">Spectrum</div>
+          <div class="small-caps">2015 Year Book</div>
+        </div>
+      </a>
+
+      <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="building.html">
+        <div class="tile-container tile-link tile-divider">
+          <img src="http://placehold.it/934x623/575757/C7C7C7?text=Base" class="pure-img" />
+          <div class="h4">Base</div>
+          <div class="small-caps">UI Framework</div>
         </div>
       </a>
 
       <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="office.html">
         <div class="tile-container tile-link tile-divider">
           <img src="<!-- @path office-04-steel_signage-index.jpg -->" class="pure-img" />
-          <div class="sub-title">Base</div>
-          <div class="caption">UI Framework</div>
+          <div class="h4">650 Cal</div>
+          <div class="small-caps">San Francisco Headquarters</div>
         </div>
       </a>
 
       <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="building.html">
         <div class="tile-container tile-link tile-divider">
-          <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
-          <div class="sub-title">Base</div>
-          <div class="caption">UI Framework</div>
+          <img src="http://placehold.it/934x623/575757/C7C7C7?text=DSGN+HAUS" class="pure-img" />
+          <div class="h4">DSGN HAUS</div>
+          <div class="small-caps">The Design Department</div>
         </div>
       </a>
 
       <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="building.html">
         <div class="tile-container tile-link tile-divider">
-          <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
-          <div class="sub-title">Base</div>
-          <div class="caption">UI Framework</div>
+          <img src="http://placehold.it/934x623/575757/C7C7C7?text=Scale" class="pure-img" />
+          <div class="h4">Scale</div>
+          <div class="small-caps">2014 Year Book</div>
         </div>
       </a>
 
       <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="building.html">
         <div class="tile-container tile-link tile-divider">
-          <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
-          <div class="sub-title">Base</div>
-          <div class="caption">UI Framework</div>
+          <img src="<!-- @path building-01-cover-index.jpg -->" class="pure-img" />
+          <div class="h4">Building</div>
+          <div class="small-caps">2013 Year Book</div>
         </div>
       </a>
 
       <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="building.html">
         <div class="tile-container tile-link tile-divider">
-          <img src="<!-- @path buildingtest.jpg -->" class="pure-img" />
-          <div class="sub-title">Base</div>
-          <div class="caption">UI Framework</div>
+          <img src="http://placehold.it/934x623/575757/C7C7C7?text=Stuff+We+Get" class="pure-img" />
+          <div class="h4">Stuff We Get</div>
+          <div class="small-caps">Employee Experience</div>
         </div>
       </a>
 
