--- a/office.html
+++ b/office.html
@@ -4,14 +4,19 @@
 
   <div class="wrapper content">
 
-    <img src="<!-- @path office-18-window_booth.jpg -->" class="project-mast opaque" />
+    <img src="<!-- @path office-18-window_booth-mast.jpg -->" class="project-mast opaque" />
 
     <div class="container pure-g">
 
       <div class="tile pure-u-1 pure-u-lg-1-2">
         <div class="tile-container tile-divider tile-project_intro tile-project_intro_left">
-          <h1>Office</h1>
-          <h2>San Francisco Headquarters</h1>
+          <h1 class="h1">650 Cal</h1>
+          <h2 class="small-caps">San Francisco Headquarters</h1>
+
+          <div class="data all-projects">
+            <div class="small-caps"><a href="index.html">&lt;&lt; All Projects</a></div>
+          </div>
+
         </div>
       </div>
 
@@ -22,10 +27,10 @@
           </p>
 
           <div class="data">
-            <div class="caption">Role: <em>Conception, Creative Direction, Design</em></div>
-            <div class="caption">Output: <em>XXX page perfect bound book</em></div>
-            <div class="caption">Year: <em>2014</em></div>
-            <div class="caption">Notes: <em>Work completed at AppDirect</em></div>
+            <div class="small-caps">Role: <em>Conception, Creative Direction, Design</em></div>
+            <div class="small-caps">Output: <em>XXX page perfect bound book</em></div>
+            <div class="small-caps">Year: <em>2014</em></div>
+            <div class="small-caps">Notes: <em>Work completed at AppDirect</em></div>
           </div>
 
         </div>
@@ -45,9 +50,9 @@
 
       <div class="tile pure-u-1">
         <div class="tile-container tile-callout">
-          <p>
+          <div class="h3">
               Hey here is some info.
-          </p>
+          </div>
         </div>
       </div>
 
@@ -101,9 +106,9 @@
 
       <div class="tile pure-u-1">
         <div class="tile-container tile-callout">
-          <p>
+          <div class="h3">
               Hey here is some info.
-          </p>
+          </div>
         </div>
       </div>
 
