--- a/base.html
+++ b/base.html
@@ -10,8 +10,8 @@
 
       <div class="tile pure-u-1 pure-u-lg-1-2">
         <div class="tile-container tile-divider tile-project_intro">
-          <h1 class="h1">Building [test]</h1>
-          <h2 class="small-caps">2013 Year Book</h1>
+          <h1 class="h1">Base</h1>
+          <h2 class="small-caps">UI Framework</h1>
 
           <div class="data all-projects">
             <div class="small-caps"><a href="index.html">&lt;&lt; All Projects</a></div>
@@ -38,7 +38,7 @@
 
       <div class="tile pure-u-1">
         <div class="tile-container">
-          <img src="<!-- @path building-01-cover.jpg -->" class="pure-img" />
+          <img src="<!-- @path base-interface_collage.jpg -->" class="pure-img" />
         </div>
       </div>
 
