--- a/building.html
+++ b/building.html
@@ -10,7 +10,7 @@
 
       <div class="tile pure-u-1 pure-u-lg-1-2">
         <div class="tile-container tile-divider tile-project_intro">
-          <h1 class="h1">Building [test]</h1>
+          <h1 class="h1">Building [test2]</h1>
           <h2 class="small-caps">2013 Year Book</h1>
 
           <div class="data all-projects">
