Added next/prev, tweaks to CSS and JS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
       </a>
 
-      <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="building.html">
+      <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="base.html">
         <div class="tile-container tile-link tile-divider">
           <img src="http://placehold.it/934x623/575757/C7C7C7?text=Base" class="pure-img" />
           <div class="h4">Base</div>
