--- a/base.html
+++ b/base.html
@@ -1,3 +1,8 @@
+<!-- $prev-title Previous Title -->
+<!-- $prev-url Previous -->
+<!-- $next-title Next Title -->
+<!-- $next-url Previous -->
+
 <!-- @include _header -->
 
 <div id="data-container">
@@ -109,7 +114,7 @@
     </div><!-- /.container -->
   </div><!-- /.wrapper.content -->
 
-  <!-- @include _footer-nav -->
+  <!-- @include footer-nav -->
 
 </div><!-- /#data-container -->
 
