--- a/office.html
+++ b/office.html
@@ -9,7 +9,9 @@
 
   <div class="wrapper content">
 
-    <img src="<!-- @path office-18-window_booth-mast.jpg -->" class="project-mast opaque" />
+    <div class="project-mast">
+      <img src="<!-- @path office-18-window_booth-mast.jpg -->"/>
+    </div>
 
     <div class="container pure-g">
 
