--- a/base.html
+++ b/base.html
@@ -9,7 +9,7 @@
 
   <div class="wrapper content">
 
-    <img src="http://placehold.it/5000x2000/575757/C7C7C7?text=placeholder" class="project-mast opaque" />
+    <img src="<!-- @path base-01-coit-mast.jpg -->" class="project-mast opaque" />
 
     <div class="container pure-g">
 
@@ -49,7 +49,7 @@
 
       <div class="tile pure-u-1">
         <div class="tile-container">
-          <img src="<!-- @path building-02-full_title.jpg -->" class="pure-img" />
+          <img src="<!-- @path base-principles.jpg -->" class="pure-img" />
         </div>
       </div>
 
@@ -63,53 +63,25 @@
 
       <div class="tile pure-u-1">
         <div class="tile-container">
-          <img src="<!-- @path building-05-photo_ping_pong.jpg -->" class="pure-img" />
+          <img src="<!-- @path base-04-billing.jpg -->" class="pure-img" />
         </div>
       </div>
 
       <div class="tile pure-u-1">
         <div class="tile-container">
-          <img src="<!-- @path building-03-new_team_members.jpg -->" class="pure-img" />
-        </div>
-      </div>
-
-      <div class="tile pure-u-1">
-        <div class="tile-container">
-          <img src="<!-- @path building-06-photo_team_drinks.jpg -->" class="pure-img" />
+          <img src="<!-- @path base-02-mobile.jpg -->" class="pure-img" />
         </div>
       </div>
 
       <div class="tile pure-u-1">
         <div class="tile-container tile-callout">
           <div class="h3">
-              Hey here is some info. I gotta put a bunch more type in here so I can see what this looks like breaking to many lines.
+              Hey here is some info.
           </div>
         </div>
       </div>
 
-      <div class="tile pure-u-1">
-        <div class="tile-container">
-          <img src="<!-- @path building-08-81_release.jpg -->" class="pure-img" />
-        </div>
-      </div>
 
-      <div class="tile pure-u-1">
-        <div class="tile-container">
-          <img src="<!-- @path building-10-telia.jpg -->" class="pure-img" />
-        </div>
-      </div>
-
-      <div class="tile pure-u-1">
-        <div class="tile-container">
-          <img src="<!-- @path building-09-infographic.jpg -->" class="pure-img" />
-        </div>
-      </div>
-
-      <div class="tile pure-u-1">
-        <div class="tile-container">
-          <img src="<!-- @path building-04-100_milestone.jpg -->" class="pure-img" />
-        </div>
-      </div>
 
     </div><!-- /.container -->
   </div><!-- /.wrapper.content -->
