--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="base.html">
         <div class="tile-container tile-link tile-divider">
-          <img src="http://placehold.it/934x623/575757/C7C7C7?text=Base" class="pure-img" />
+          <img src="<!-- @path base-02-mobile-index -->" class="pure-img" />
           <div class="h4">Base</div>
           <div class="small-caps">UI Framework</div>
         </div>
@@ -54,14 +54,6 @@
           <img src="<!-- @path building-01-cover-index.jpg -->" class="pure-img" />
           <div class="h4">Building</div>
           <div class="small-caps">2013 Year Book</div>
-        </div>
-      </a>
-
-      <a class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" href="building.html">
-        <div class="tile-container tile-link tile-divider">
-          <img src="http://placehold.it/934x623/575757/C7C7C7?text=Stuff+We+Get" class="pure-img" />
-          <div class="h4">Stuff We Get</div>
-          <div class="small-caps">Employee Experience</div>
         </div>
       </a>
 
