Tweaks and stuff

--- a/base.html
+++ b/base.html
@@ -10,7 +10,7 @@
   <div class="wrapper content">
 
     <div class="project-mast">
-      <img src="<!-- @path base-01-coit-mast.jpg -->" class="project-mast opaque" />
+      <img src="<!-- @path base-01-coit-mast.jpg -->" />
     </div>
 
     <div class="container pure-g">
