--- a/base.html
+++ b/base.html
@@ -76,6 +76,12 @@
       </div>
 
       <div class="tile pure-u-1">
+        <div class="tile-container">
+          <img src="<!-- @path base-03-dashboard.jpg -->" class="pure-img" />
+        </div>
+      </div>
+
+      <div class="tile pure-u-1">
         <div class="tile-container tile-callout">
           <div class="h3">
               Hey here is some info.
@@ -83,7 +89,23 @@
         </div>
       </div>
 
+      <div class="tile pure-u-1">
+        <div class="tile-container">
+          <img src="<!-- @path base-05-product_profile.jpg -->" class="pure-img" />
+        </div>
+      </div>
 
+      <div class="tile pure-u-1">
+        <div class="tile-container">
+          <img src="<!-- @path base-06-user_profile.jpg -->" class="pure-img" />
+        </div>
+      </div>
+
+      <div class="tile pure-u-1">
+        <div class="tile-container">
+          <img src="<!-- @path base-07-admin.jpg -->" class="pure-img" />
+        </div>
+      </div>
 
     </div><!-- /.container -->
   </div><!-- /.wrapper.content -->
