--- a/office.html
+++ b/office.html
@@ -138,10 +138,11 @@
       </div>
 
     </div><!-- /.container -->
-  </div><!-- /.wrapper.content -->
 
-  <!-- @include footer-nav -->
+    <!-- @include footer-nav -->
+
+  </div><!-- /.wrapper.content -->
 
 </div><!-- /#data-container -->
 
-<!-- @include _footer -->
+<!-- @include footer -->
