Scroll and hover fixes

--- a/base.html
+++ b/base.html
@@ -1,7 +1,8 @@
+<!-- $opaque null -->
 <!-- $prev-title Previous Title -->
 <!-- $prev-url Previous -->
 <!-- $next-title Next Title -->
-<!-- $next-url Previous -->
+<!-- $next-url office -->
 
 <!-- @include _header -->
 
